# Aid

./: .gitignore  .vercelignore  README.md  README_VERCEL.md  idea.txt  main.py  pyproject.toml  requirements.txt  structured_info_required.txt  system_design.txt  vercel.json
agents/: electricity_emergency_agent.py  fire_emergency_agent.py  followup_agent.py  medical_emergency_agent.py  police_emergency_agent.py  triage_agent.py
agents/schemas/: agent_schemas.py
api/: index.py
configurations/: config.py  postgres_db.py
data/: electricity_data.txt  fire_data.txt  medical_data.txt  police_data.txt
models/: chat_model.py  database_models.py
routes/: authority_routes.py  electricity_emergency_routes.py  fire_emergency_routes.py  followup_routes.py  medical_emergency_routes.py  notification_routes.py  police_emergency_routes.py  triage_routes.py
utils/: database_utils.py  electricity_emergency_utils.py  email_service.py  fire_emergency_utils.py  jwt_auth.py  medical_emergency_utils.py  message_formatter.py  police_emergency_utils.py  triage_utils.py
